# chopin

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
chopin/: __init__.py  chopin.py  compositions.py  contents.py  errors.py
chopin/data/: compositions.json  contents.json
