[metadata]
name = chopin
version = attr:chopin.__version__
author = ster
author_email = ster.physics@gmail.com
description = chopin is a chopin package
long_description_content_type = text/markdown
long_description = file:README.md
url = https://github.com/ster-phys/chopin
license = MIT License
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    youtube-dl
